# CMAKE_LEARN

./: README.md
test00/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test01/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test03/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test04/: CMakeLists.txt  test
test04/include/: add.h
test04/lib/: libmath.dylib
test05/: CMakeLists.txt
test05/src/: CMakeLists.txt
test06/: CMakeLists.txt  test.cpp
test06/cmake/modules/: FindMath.cmake
test06/include/: jian.h
test07/: CMakeLists.txt
test08/: CMakeLists.txt
test08/cmake/: functionTest.cmake  macroTest.cmake  set_cxx_norm.cmake
test08/cmake_test1/: CMakeLists.txt  test.cpp
test08/cmake_test2/: CMakeLists.txt  test.cpp
test08/cmake_test3/: CMakeLists.txt  test.cpp
test08/include/: fileA.h  fileB.h
test08/lib/: fileA.cpp  fileB.cpp  libfileA.dylib  libfileB.dylib
test10/: hello_world.cmake
test_09/: CMakeLists.txt
