# # 指定 cmake 最低编译版本
# CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
# PROJECT (MATH)
# # 把当前工程目录下的 src 目录的下的所有 .cpp 和 .c 文件赋值给 SRC_LIST
# AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_LIST)
# # FILE(GLOB SRC_LIST "${PROJECT_SOURCE_DIR}/src/*.cpp")
# # 打印 SRC_LIST 文件列表
# MESSAGE(STATUS ${SRC_LIST})
# # 指定头文件目录
# INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
# # 指定输出 .so 动态库的目录位置
# SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
# # 指定生成动态库
# ADD_LIBRARY(math SHARED ${SRC_LIST})
# # 指定生成版本号，VERSION指代动态库版本，SOVERSION指代API版本
# # SET_TARGET_PROPERTIES(math PROPERTIES VERSION 1.2 SOVERSION 1)

#最低版本
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
#项目信息
PROJECT(demo)

# 生成链接库用的子目录
# add_subdirectory(src)
 
#头文件目录
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
 
#查找当前目录下所有源文件
#并将文件名保存在DIR_SOURECE
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} DIR_SOURCE)
message(DIR_SOURCE)

#指定生成目标
ADD_EXECUTABLE(app ${DIR_SOURCE})
 
#添加链接库
TARGET_LINK_LIBRARIES(app libjian.so)